--- a/.cproject
+++ b/.cproject
@@ -455,6 +455,7 @@
 								</option>
 								<option id="org.eclipse.cdt.cross.arm.gnu.assembler.option.preprocessor.def.1063617456" name="Defined symbols (-D)" superClass="org.eclipse.cdt.cross.arm.gnu.assembler.option.preprocessor.def" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="RADIO_PROTOCOL_VERSION=254"/>
+									<listOptionValue builtIn="false" value="TUNER=TRUE"/>
 								</option>
 								<inputType id="org.eclipse.cdt.cross.arm.gnu.sourcery.windows.assembler.base.input.547201385" superClass="org.eclipse.cdt.cross.arm.gnu.sourcery.windows.assembler.base.input"/>
 							</tool>
@@ -498,6 +499,9 @@
 								<option id="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.misc.std.1408928236" name="Language Standard" superClass="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.misc.std" value="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.misc.std.gnu99" valueType="enumerated"/>
 								<option id="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.preprocessor.def.1835443960" name="Defined symbols (-D)" superClass="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.preprocessor.def" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="FIRMWARE_VERSION=&quot;3.2.4&quot;"/>
+									<listOptionValue builtIn="false" value="CHE_CONTROLLER=TRUE"/>
+									<listOptionValue builtIn="false" value="SHARP_DISPLAY=TRUE"/>
+									<listOptionValue builtIn="false" value="TUNER=TRUE"/>
 									<listOptionValue builtIn="false" value="gPromiscuousMode_d=FALSE"/>
 									<listOptionValue builtIn="false" value="HARDWARE_VERSION=&quot;01.0&quot;"/>
 									<listOptionValue builtIn="false" value="RADIO_PROTOCOL_VERSION=2"/>
