--- a/Project_Settings/Debugger/openocd/scripts/interface/c232hm-edhsl-0.cfg
+++ b/Project_Settings/Debugger/openocd/scripts/interface/c232hm-edhsl-0.cfg
@@ -2,6 +2,7 @@
 
 interface ftdi
 ftdi_vid_pid 0x0403 0x6014
+ftdi_device_desc C232HM-DDHSL-0
 
 # 0x000f -> TMS, TCK, TDI, TDO
 # 0x4000 -> ^LED
@@ -16,10 +17,10 @@ ftdi_layout_signal LED -ndata 0x4000
 
 # We could use GPIOL0 and GPIOL1 for SRST resp. TRST.
 # This is a guess how to do it:
-ftdi_layout_signal nSRST -data 0x0010 -oe 0x0010
-ftdi_layout_signal nTRST -data 0x0020 -oe 0x0020
-
 ftdi_layout_signal GPIOL0 -data 0x0010 -oe 0x0010
-ftdi_layout_signal GPIOL1 -data 0x0020 -oe 0x0020
+ftdi_layout_signal GPIOL1 -data 0x0020 -oe 0x0020 
 ftdi_layout_signal GPIOL2 -data 0x0040 -oe 0x0040
 ftdi_layout_signal GPIOL3 -data 0x0080 -oe 0x0080
+
+ftdi_layout_signal nSRST -data 0x0010 -oe 0x0010
+ftdi_layout_signal nTRST -data 0x0020 -oe 0x0020
