Initial POSCON feature updates

--- a/.project
+++ b/.project
@@ -12,6 +12,7 @@
 		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
+			<triggers>clean,full,incremental,</triggers>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -205,6 +206,16 @@
 			<location>/Applications/KDS_3.0.0.app/Contents/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/WDOG_PDD.h</location>
 		</link>
 		<link>
+			<name>Generated_Code/Peripherals/SMC_Init.c</name>
+			<type>1</type>
+			<location>/Applications/KDS_3.0.0.app/Contents/eclipse/ProcessorExpert/Repositories/Kinetis_Repository/lib/Kinetis/pdd2/MKW21D256HA5/peripherals/SMC_Init.c</location>
+		</link>
+		<link>
+			<name>Generated_Code/Peripherals/SMC_Init.h</name>
+			<type>1</type>
+			<location>/Applications/KDS_3.0.0.app/Contents/eclipse/ProcessorExpert/Repositories/Kinetis_Repository/lib/Kinetis/pdd2/MKW21D256HA5/peripherals/SMC_Init.h</location>
+		</link>
+		<link>
 			<name>Generated_Code/Peripherals/SPI0_Init.c</name>
 			<type>1</type>
 			<location>/Applications/KDS_3.0.0.app/Contents/eclipse/ProcessorExpert/Repositories/Kinetis_Repository/lib/Kinetis/pdd2/MKW21D256HA5/peripherals/SPI0_Init.c</location>
@@ -223,6 +234,16 @@
 			<name>Generated_Code/Peripherals/UART0_Init.h</name>
 			<type>1</type>
 			<location>/Applications/KDS_3.0.0.app/Contents/eclipse/ProcessorExpert/Repositories/Kinetis_Repository/lib/Kinetis/pdd2/MKW21D256HA5/peripherals/UART0_Init.h</location>
+		</link>
+		<link>
+			<name>Generated_Code/Peripherals/UART1_Init.c</name>
+			<type>1</type>
+			<location>/Applications/KDS_3.0.0.app/Contents/eclipse/ProcessorExpert/Repositories/Kinetis_Repository/lib/Kinetis/pdd2/MKW21D256HA5/peripherals/UART1_Init.c</location>
+		</link>
+		<link>
+			<name>Generated_Code/Peripherals/UART1_Init.h</name>
+			<type>1</type>
+			<location>/Applications/KDS_3.0.0.app/Contents/eclipse/ProcessorExpert/Repositories/Kinetis_Repository/lib/Kinetis/pdd2/MKW21D256HA5/peripherals/UART1_Init.h</location>
 		</link>
 		<link>
 			<name>Generated_Code/System/CPU_Init.c</name>
